--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <title>Morocco</title>
-  <link rel="stylesheet" type="text/css" href="styles/reset.css">
-  <link rel="stylesheet" type="text/css" href="styles/style.css">
+  <link rel="stylesheet" href="resources\reset.css" type="text/css">
+  <link rel="stylesheet" href="resources\style.css" type="text/css">
 
 </head>
 <body>
